--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,9 +21,7 @@ services:
     ports:
       - "6789:8080"
     environment:
-      DATABASE_URL: "jdbc:postgresql://db:5432/selvrapportering"
-      DATABASE_USER: "user"
-      DATABASE_PASSWORD: "password"
+      DATABASE_URL: "postgresql://user:password@db:5432/selvrapportering"
 
   # SQL admin
   adminer:
