Import connection string from appsettings or environment variables

--- a/src/settings/appsettings.json
+++ b/src/settings/appsettings.json
@@ -4,5 +4,6 @@
   "clientId": "jGeDyv34XyhBOq5xDC9FwYvWuhH2FMHV",
   "virutal_path": "",
   "jwtPermissionProperty": "https://api.bekk.no/claims/permission",
+  "connection_string": "postgresql://postgres:myPassword@localhost:5432/selvrapportering",
   "adminPermission": "admin:auth"
 }
